--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="title_activity_maps">Map</string>
 
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
     <string-array name="mapOptions">
         <item>Save Location</item>
         <item>Add To List</item>
@@ -11,5 +14,6 @@
 
     <string name="title_activity_friend_maps">Friends Map</string>
     <string name="title_activity_nearby_locations">Map</string>
+
 
 </resources>
