--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">TravelFYP</string>
     <string name="title_activity_maps">Map</string>
+    <string name="places_api_key">AIzaSyAb0rD1B23s0hTEBwBuZ5oJjs4jPPp6IQA</string>
 
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -14,6 +15,10 @@
 
     <string name="title_activity_friend_maps">Friends Map</string>
     <string name="title_activity_nearby_locations">Map</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_events_map">Map</string>
 
 
 </resources>
